[tool.poetry]
name = "test-vseinstr"
version = "0.1.0"
description = ""
authors = ["kuj1 <the.same.dentist@gmail.com>"]
readme = "README.md"
packages = [{include = "test_vseinstr"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
undetected-chromedriver = "^3.4.7"
selenium = "^4.9.1"
bs4 = "^0.0.1"
pandas = "^2.0.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
